--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "d3": "^5.16.0",
-    "d3-array": "^2.4.0"
+    "d3-array": "^2.4.0",
+    "d3-hexbin": "^0.2.2"
   }
 }
